# cpp-singleflight

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml  codeql.yml
cmake/: CI.CTestScript.cmake  CTestCustom.cmake.in  ConfigSafeGuards.cmake  Coverage.cmake  SingleFlightConfig.cmake.in  Warnings.cmake
examples/: CMakeLists.txt  example.cpp
include/singleflight/: singleflight.h
src/: singleflight.cpp
tests/: CMakeLists.txt  main.cpp  test.cpp
